# proto3

./: .flake8  .flaskenv  .gitignore  .gitmodules  DEVELOPMENT.md  LICENSE  README.md  auth.py  back.py  calendarpush.py  check_routes.py  config.py.example  configproxy.py  decorators.py  legacy.py  parser.py  protoparser.py  pyproject.toml  requirements.txt  server.py  shared.py  start_celery.sh  tasks.py  tests.py  todostates.py  utils.py  validators.py  wiki.py
example-config/: celery.service  protokollsystem  protokollsystem.service  uwsgi.ini
migrations-mysql/versions/: 15e172ac1a28_.py  841fb7253188_.py
models/: database.py  errors.py
static/css/: style.css
templates/: calendar-tops.txt  decision.md  decision.tex  decisioncategory-edit.html  decisioncategory-new.html  decisions-list.html  default-top-edit.html  default-top-new.html  defaultmeta-edit.html  defaultmeta-new.html  document-edit.html  documentation-base.html  documentation-configuration-settings.html  documentation-configuration-todomails.html  documentation-configuration-types.html  documentation-configuration.html  documentation-sessionmanagement-plan.html  documentation-sessionmanagement-tracking.html  documentation-sessionmanagement-write.html  documentation-sessionmanagement.html  documentation-syntax-internal.html  documentation-syntax-lists.html  documentation-syntax-meta.html  documentation-syntax-tags.html  documentation-syntax-top.html  documentation-syntax.html  documentation.html  error-show.html  errors-list.html  index.html  infobox.wiki  layout.html  layout_simple.html  localtop-edit.html  login.html  macros.html  pad_index.html  pagination-footer.html  protocol-index.md  protocol-list.html  (+37 more)
views/: forms.py  tables.py
(+47 files in other folders)
