[project]
name = "proto3"
dynamic = ["version"]
description = "System zur Verwaltung von Protokollen und Sitzungen."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "apscheduler==3.11.*",
    "caldav==1.6.*",
    "celery==5.5.*",
    "etherpad-lite==0.5",
    "feedgen==1.0.*",
    "flask==2.2.*",
    "flask-migrate==3.1",
    "flask-sqlalchemy==3.0.*",
    "flask-wtf==1.2.*",
    "fuzzywuzzy[speedup]==0.18",
    "icalendar==6.3.*",
    "redis==6.2.*",
    "regex==2024.11.6",
    "requests==2.28.*",
    "sqlalchemy==2.0.*",
    "sqlalchemy-utils==0.41.*",
    "werkzeug<3.0.0",
    "wtforms==3.2.*",
]

[project.urls]
Repository = "https://git.fsmpi.rwth-aachen.de/protokollsystem/proto3"

[build-system]
requires = [
    "hatchling==1.27.*",
    "hatch-vcs==0.4.*",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project.scripts]
proto3 = "server:cli"

[project.optional-dependencies]
fsmpi = ["proto3[sentry,uwsgi,pam,ldap,postgres]"]
froscon = ["proto3[uwsgi,pam,ldap,postgres,gitlab]"]
gitlab = [
    "python-gitlab==4.5.*",
]
sentry = [
    "raven==6.10",
]
uwsgi = [
    "uwsgidecorators==1.1",
]
pam = [
    "python-pam==2.0.*",
]
ldap = [
    "ldap3==2.9.*",
]
postgres = [
    "psycopg2==2.9.*",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "coverage>=7.9.1",
    "flake8>=7.2.0",
    "mccabe>=0.7.0",
    "pycodestyle>=2.13.0",
    "python-dotenv>=1.1.0",
    "watchdog>=6.0.0",
]
